Don't use deprecated Integer ctor.